helper/extension methods, composition, cleanups and fixes
- ADD: ReadGuid() helper & extension methods for BinaryReader
- ADD: WriteGuid() helper & extension methods for BinaryWriter
- ADD: ComposablePartCatalog based on an assembly public key whitelist
- ADD: optimized version of SequenceEqual() extension method for older
.NET target frameworks
- CHG: code cleanups
- FIX: compiler errors

--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,4 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/Enums/AppServer.xml
 
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/MarcelJoachimKloubert.ApplicationServer.DataModels.csproj.user
+/MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj.user
