--- a/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.45/MarcelJoachimKloubert.CLRToolbox.45.csproj
@@ -304,6 +304,10 @@
       <Link>Helpers\CollectionHelper.Select.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.SequenceEqual.cs">
+      <Link>Helpers\CollectionHelper.SequenceEqual.cs</Link>
+      <DependentUpon>CollectionHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\CollectionHelper.Shuffle.cs">
       <Link>Helpers\CollectionHelper.Shuffle.cs</Link>
       <DependentUpon>CollectionHelper.cs</DependentUpon>
@@ -334,6 +338,14 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.cs">
       <Link>Helpers\IOHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.ReadGuid.cs">
+      <Link>Helpers\IOHelper.ReadGuid.cs</Link>
+      <DependentUpon>IOHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\IOHelper.WriteGuid.cs">
+      <Link>Helpers\IOHelper.WriteGuid.cs</Link>
+      <DependentUpon>IOHelper.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\MethodHelper.cs">
       <Link>Helpers\MethodHelper.cs</Link>
@@ -766,6 +778,14 @@
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.cs">
       <Link>Extensions\IO.cs</Link>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.ReadGuid.cs">
+      <Link>Extensions\IO.ReadGuid.cs</Link>
+      <DependentUpon>IO.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\IO.WriteGuid.cs">
+      <Link>Extensions\IO.WriteGuid.cs</Link>
+      <DependentUpon>IO.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.35\Extensions\LinqExpressions.cs">
       <Link>Extensions\LinqExpressions.cs</Link>
     </Compile>
@@ -871,6 +891,9 @@
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.40\Composition\SingleInstanceComposer.cs">
       <Link>Composition\SingleInstanceComposer.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.40\Composition\StrongNamedAssemblyPartCatalog.cs">
+      <Link>Composition\StrongNamedAssemblyPartCatalog.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.40\Diagnostics\Execution\LogCommandBase.Execute.cs">
       <Link>Diagnostics\Execution\LogCommandBase.Executa.cs</Link>
