--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/MarcelJoachimKloubert.AppServer.Web.Common.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Web.Common/MarcelJoachimKloubert.AppServer.Web.Common.csproj
@@ -29,6 +29,12 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>MarcelJoachimKloubert.AppServer.Web.Common.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -61,6 +67,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="LICENSE" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="MarcelJoachimKloubert.AppServer.Web.Common.snk" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
