app server, INI files and composition
- ADD: cloud and DocDB app server modules
- FIX: converting INI files to a CLR target type
- CHG: made StringNamedAssemblyPatCatalog clonable and thread-safe

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,7 @@
 
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/MarcelJoachimKloubert.ApplicationServer.DataModels.csproj.user
 /MarcelJoachimKloubert.CLRToolbox.35/MarcelJoachimKloubert.CLRToolbox.35.csproj.user
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.DocDB/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.DocDB/bin
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.Cloud/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.Cloud/bin
