--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/config.sample.ini
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/config.sample.ini
@@ -4,3 +4,8 @@
 ;   - ado_oracle
 provider=ado_mssql
 connection_string=Server\=localhost\;Database\=ApplicationServer\;User Id\=sa\;Password\=deutsche_polizisten_gaertner_und_floristen\;
+
+[web_interface]
+use_https=1
+port=5979
+ssl_thumbprint=01 02 03 04 05 06 07 09 09 0a 0b 0c 0d 0e 0f 10 11 12 13 14
