INI files, modules and samples
- UPD: config.ini sample
- ADD: chat and filebox modules

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,8 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.DocDB/bin
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.Cloud/obj
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.Cloud/bin
+
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.Chat/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.Chat/bin
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.FileBox/obj
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.FileBox/bin
