--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/MarcelJoachimKloubert.ApplicationServer.TestHost.csproj
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/MarcelJoachimKloubert.ApplicationServer.TestHost.csproj
@@ -67,6 +67,10 @@
       <Project>{e1e0c026-ee71-45a2-a2bf-5ce6fcecccd0}</Project>
       <Name>MarcelJoachimKloubert.AppServer.Funcs.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\MarcelJoachimKloubert.AppServer.Modules.Chat\MarcelJoachimKloubert.AppServer.Modules.Chat.csproj">
+      <Project>{859639ac-14f2-4d40-9746-5153693fc54e}</Project>
+      <Name>MarcelJoachimKloubert.AppServer.Modules.Chat</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MarcelJoachimKloubert.AppServer.Modules.Cloud\MarcelJoachimKloubert.AppServer.Modules.Cloud.csproj">
       <Project>{7c472dd7-bbf7-48fc-b763-64ae5b6a7acb}</Project>
       <Name>MarcelJoachimKloubert.AppServer.Modules.Cloud</Name>
@@ -74,6 +78,10 @@
     <ProjectReference Include="..\MarcelJoachimKloubert.AppServer.Modules.DocDB\MarcelJoachimKloubert.AppServer.Modules.DocDB.csproj">
       <Project>{e79e4e16-9d08-4034-9633-ec2a1bc83479}</Project>
       <Name>MarcelJoachimKloubert.AppServer.Modules.DocDB</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MarcelJoachimKloubert.AppServer.Modules.FileBox\MarcelJoachimKloubert.AppServer.Modules.FileBox.csproj">
+      <Project>{7f8a21a1-c77c-41a6-9fbf-e7cf61554e19}</Project>
+      <Name>MarcelJoachimKloubert.AppServer.Modules.FileBox</Name>
     </ProjectReference>
     <ProjectReference Include="..\MarcelJoachimKloubert.AppServer.Modules.RemoteComm\MarcelJoachimKloubert.AppServer.Modules.RemoteComm.csproj">
       <Project>{2a04af55-a6a7-4236-acaf-7a0f0211540a}</Project>
@@ -113,10 +121,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="config.sample.ini" />
     <None Include="config.ini">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="config.sample.ini" />
     <None Include="services\dummy.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
