--- a/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/config.sample.ini
+++ b/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/config.sample.ini
@@ -3,7 +3,7 @@
 ;   - ado_oledb
 ;   - ado_oracle
 provider=ado_mssql
-connection_string=Server\=localhost\;Database\=ApplicationServer\;User Id\=sa\;Password\=deutsche_polizisten_gaertner_und_floristen\;
+connection_string=Server\=localhost\;Encrypt\=yes\;Database\=ApplicationServer\;User Id\=sa\;Password\=deutsche_polizisten_gaertner_und_floristen\;
 
 [web_interface]
 use_https=1
