console, helper/extension methods, modules, app server test host, cleanups and fixes
- ADD: ReadPassword() for IConsole interface
- ADD: ToUnsecureString() extension & helper methods
- ADD: SetBasicAuth() extension & helper methods
- ADD: test functions for app server test host
- ADD: data model for DocDB module
- ADD: navigation properties are generated in T4 entity generator now
- ADD: ContentType property and GetBodyData() method for IHttpRequest
- ADD: StatusDescription property for IHttpResponse
- CHG: HTTP status code (204) if current status code is 200 (OK) and no
result data byte array is empty
- UPD: (internal) names of modules
- CHG: code cleanups
- DEL: App.config files
- FIX: starting server

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,7 @@
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.Chat/bin
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.FileBox/obj
 /Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.FileBox/bin
+
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.TestHost/_rootDir/modules/docdb/config.ini
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.ApplicationServer.DataModels/App.Config
+/Projects/MarcelJoachimKloubert.ApplicationServer/MarcelJoachimKloubert.AppServer.Modules.DocDB/App.Config
