--- a/MarcelJoachimKloubert.CLRToolbox.30/MarcelJoachimKloubert.CLRToolbox.30.csproj
+++ b/MarcelJoachimKloubert.CLRToolbox.30/MarcelJoachimKloubert.CLRToolbox.30.csproj
@@ -397,6 +397,17 @@
       <Link>Helpers\MethodHelper.TryGetDelegateTypeFromMethod.cs</Link>
       <DependentUpon>MethodHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\NetHelper.cs">
+      <Link>Helpers\NetHelper.cs</Link>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\NetHelper.SetBasicAuth.cs">
+      <Link>Helpers\NetHelper.SetBasicAuth.cs</Link>
+      <DependentUpon>NetHelper.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\NetHelper.SetBasicAuth.SecureString.cs">
+      <Link>Helpers\NetHelper.SetBasicAuth.SecureString.cs</Link>
+      <DependentUpon>NetHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\ScriptHelper.cs">
       <Link>Helpers\ScriptHelper.cs</Link>
     </Compile>
@@ -443,6 +454,10 @@
       <Link>Helpers\StringHelper.IsNullOrWhiteSpace.cs</Link>
       <DependentUpon>StringHelper.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\StringHelper.ToUnsecureString.cs">
+      <Link>Helpers\StringHelper.ToUnsecureString.cs</Link>
+      <DependentUpon>StringHelper.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\Helpers\StringHelper.UppercaseWords.cs">
       <Link>Helpers\StringHelper.UppercaseWords.cs</Link>
       <DependentUpon>StringHelper.cs</DependentUpon>
@@ -464,6 +479,10 @@
       <Link>IO\ConsoleBase.Interface.cs</Link>
       <DependentUpon>ConsoleBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IO\ConsoleBase.ReadPassword.cs">
+      <Link>IO\ConsoleBase.ReadPassword.cs</Link>
+      <DependentUpon>ConsoleBase.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IO\GlobalConsole.cs">
       <Link>IO\GlobalConsole.cs</Link>
     </Compile>
@@ -474,11 +493,19 @@
       <Link>IO\IConsole.dotNET.cs</Link>
       <DependentUpon>IConsole.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IO\IConsole.ReadPassword.cs">
+      <Link>IO\IConsole.ReadPassword.cs</Link>
+      <DependentUpon>IConsole.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IO\SystemConsole.cs">
       <Link>IO\SystemConsole.cs</Link>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IO\SystemConsole.dotNET.cs">
       <Link>IO\SystemConsole.dotNET.cs</Link>
+      <DependentUpon>SystemConsole.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IO\SystemConsole.ReadPassword.cs">
+      <Link>IO\SystemConsole.ReadPassword.cs</Link>
       <DependentUpon>SystemConsole.cs</DependentUpon>
     </Compile>
     <Compile Include="..\MarcelJoachimKloubert.CLRToolbox.20\IRunnable.cs">
